--- a/front/src/app/components/saving-service/saving-service.component.html
+++ b/front/src/app/components/saving-service/saving-service.component.html
@@ -32,8 +32,8 @@
                     <h5>Esta línea de ahorro está especialmente destinada para aquellos asociados que desean ahorrar para la
                         compra de vivienda o para realizar mejoras en su hogar.</h5>
                     <div class="d-grid gap-2 col-6 mx-auto mb-3">
-                        <button class="text-center btn btn-primary" type="button" routerLink="/user/savings"><i
-                                class="bi bi-eye icon"></i>Ver más</button>
+                        <button class="text-center btn btn-primary" type="button" routerLink="/user/savings">
+                            <i class="bi bi-person-raised-hand icon"></i>Solicitalo aquí</button>
                     </div>
                 </div>
                 <div *ngIf="selectedSavingLine === 'AHORRO NAVIDEÑO'" class="saving-line">
@@ -42,8 +42,8 @@
                     <h5>El Ahorro Navideño está pensado para ayudar a los asociados a enfrentar los gastos típicos de la
                         temporada decembrina.</h5>
                     <div class="d-grid gap-2 col-6 mx-auto mb-3">
-                        <button class="text-center btn btn-primary" type="button" routerLink="/user/savings"><i
-                                class="bi bi-eye icon"></i>Ver más</button>
+                        <button class="text-center btn btn-primary" type="button" routerLink="/user/savings">
+                            <i class="bi bi-person-raised-hand icon"></i>Solicitalo aquí</button>
                     </div>
                 </div>
                 <div *ngIf="selectedSavingLine === 'AHORRO VACACIONAL'" class="saving-line">
@@ -52,8 +52,8 @@
                     <h5>Esta línea de ahorro te permite reservar fondos para financiar tus viajes y actividades de ocio
                         durante las vacaciones.</h5>
                     <div class="d-grid gap-2 col-6 mx-auto mb-3">
-                        <button class="text-center btn btn-primary" type="button" routerLink="/user/savings"><i
-                                class="bi bi-eye icon"></i>Ver más</button>
+                        <button class="text-center btn btn-primary" type="button" routerLink="/user/savings">
+                            <i class="bi bi-person-raised-hand icon"></i>Solicitalo aquí</button>
                     </div>
                 </div>
                 <div *ngIf="selectedSavingLine === 'AHORRO EXTRAORDINARIO'" class="saving-line">
@@ -62,8 +62,8 @@
                     <h5>Con esta línea de ahorro, los asociados pueden estar preparados para enfrentar cualquier emergencia
                         financiera que pueda surgir, como reparaciones en el hogar, gastos médicos o pérdida de empleo.</h5>
                     <div class="d-grid gap-2 col-6 mx-auto mb-3">
-                        <button class="text-center btn btn-primary" type="button" routerLink="/user/savings"><i
-                                class="bi bi-eye icon"></i>Ver más</button>
+                        <button class="text-center btn btn-primary" type="button" routerLink="/user/savings">
+                            <i class="bi bi-person-raised-hand icon"></i>Solicitalo aquí</button>
                     </div>
                 </div>
             </div>
