add redirect in credit service

--- a/front/src/app/components/credit-service/credit-service.component.html
+++ b/front/src/app/components/credit-service/credit-service.component.html
@@ -54,8 +54,7 @@
             </div>
         </div>
         <div class="col-12 col-lg-8 align-self-start mt-3">
-            <div class="card shadow tipos-ahorro">
-                <!-- Contenido de los créditos, ejemplo para "CREDITO COMPRA O MEJORAS DE VIVIENDA" -->
+            <div #card class="card shadow tipos-ahorro">
                 <div *ngIf="selectedCreditLine === 'CREDITO COMPRA O MEJORAS DE VIVIENDA'" class="credit-line">
                     <img src="../../../assets/confianza.jpg" alt="Credito Vivienda" class="img-fluid">
                     <h3>CREDITO COMPRA O MEJORAS DE VIVIENDA</h3>
