--- a/front/src/app/components/welcome/welcome.component.html
+++ b/front/src/app/components/welcome/welcome.component.html
@@ -23,8 +23,8 @@
                 </div>
                 <div class="card-body ">
                     <h5 class="card-title">Conoce los servicios de ahorro</h5>
-                    <a class="btn btn-primary me-2" routerLink="/user/savings">Solicitalo aquí</a>
-                    <a class="btn btn-primary me-2" routerLink="/user/savings">Mi historial</a>
+                    <a class="btn btn-primary me-2 mb-1" routerLink="/user/savings">Solicitalo aquí</a>
+                    <a class="btn btn-primary me-2 mb-1" routerLink="/user/savings">Mi historial</a>
                 </div>
             </div>
         </div>
@@ -35,7 +35,8 @@
                 </div>
                 <div class="card-body">
                     <h5 class="card-title">Conoce los servicios de credito</h5>
-                    <a class="btn btn-primary" routerLink="/user/credits">Ver más</a>
+                    <a class="btn btn-primary me-2 mb-1" routerLink="/user/credits">Solicitalo aquí</a>
+                    <a class="btn btn-primary me-2 mb-1" routerLink="/user/credits">Mi historial</a>
                 </div>
             </div>
         </div>
