AutoComplete select User Info

--- a/front/src/app/components/user/components/user-info/user-info.component.html
+++ b/front/src/app/components/user/components/user-info/user-info.component.html
@@ -73,7 +73,7 @@
           field="nombre"
           [(ngModel)]="selectedDepartment" 
           name="selectedDepartment"
-          (onSelect)="onDepartmentSelect($event)"/>
+          (onSelect)="onDepartmentSelect()"/>
     </div>
     <div class="col-md-6">
       <label for="fechaExpDoc" class="form-label">Municipio de expedición del documento</label>
