add carousel in agreements

--- a/front/src/app/components/agreements/agreements.component.html
+++ b/front/src/app/components/agreements/agreements.component.html
@@ -1,5 +1,6 @@
 <div class="container">
     <h1 class="text-center fw-bold mt-3">Convenios</h1>
+    <app-agreements-carousel></app-agreements-carousel>
     <p>
         Lorem, ipsum dolor sit amet consectetur adipisicing elit. Libero tempora ducimus ab, accusantium necessitatibus
         commodi quas maxime harum et expedita quibusdam hic consequatur maiores nisi, labore deserunt aliquam pariatur
