add redirect in savings component

--- a/front/src/app/components/saving-service/saving-service.component.html
+++ b/front/src/app/components/saving-service/saving-service.component.html
@@ -25,7 +25,7 @@
             </div>
         </div>
         <div class="col-12 col-lg-8 align-self-center mt-3">
-            <div class="card shadow tipos-ahorro">
+            <div #card class="card shadow tipos-ahorro">
                 <div *ngIf="selectedSavingLine === 'AHORRO VIVIENDA'" class="saving-line">
                     <img src="../../../assets/confianza.jpg" alt="Ahorro Vivienda" class="img-fluid">
                     <h3>AHORRO VIVIENDA</h3>
