add credit simulator started

--- a/front/src/app/components/credit-service/credit-service.component.html
+++ b/front/src/app/components/credit-service/credit-service.component.html
@@ -641,4 +641,6 @@
                             </div>
             </div>
         </div>
+        <p-divider/>
+        <app-simulator></app-simulator>
 </div>
