--- a/front/src/app/components/credit-service/components/simulator/simulator.component.html
+++ b/front/src/app/components/credit-service/components/simulator/simulator.component.html
@@ -1,45 +1,48 @@
 <h2 class="fw-bold mt-3 text-center">Simula tu crédito</h2>
 <div class="row">
-    <div class="col-lg-8 mx-auto">
-        <div class="form-group">
-            <label for="creditType">Tipo de Crédito</label>
-            <p>Selecciona el tipo de crédito</p>
-            <select class="form-control mb-4" id="creditType" [(ngModel)]="selectedCreditLine" (change)="onCreditLineChange()">
-                <option *ngFor="let linea of lineasCredito" [value]="linea.id">{{ linea.nombre }}</option>
-            </select>
+  <div class="col-lg-8 mx-auto">
+    <div *ngIf="lineasCredito.length > 0">
+      <div class="form-group">
+        <label for="creditType">Tipo de Crédito</label>
+        <p>Selecciona el tipo de crédito</p>
+        <select class="form-control mb-4" id="creditType" name="creditType" [(ngModel)]="selectedCreditLine" (change)="onCreditLineChange()">
+          <option *ngFor="let linea of lineasCredito" [value]="linea.id">{{ linea.nombre }}</option>
+        </select>
+      </div>
+      <div class="card simulator-card">
+        <h3 class="text-center">Calcula tus cuotas</h3>
+        <form>
+          <div class="form-group">
+            <label for="loanAmount">Monto del Crédito</label>
+            <input type="text" class="form-control mb-2" id="loanAmount" name="loanAmount" placeholder="Ingresa el monto del crédito" [(ngModel)]="loanAmount" (ngModelChange)="onLoanAmountChange($event)">
+          </div>
+          <div class="form-group">
+            <label for="interestRate">Tasa de Interés (%)</label>
+            <input type="number" class="form-control mb-2" id="interestRate" name="interestRate" [(ngModel)]="interestRate" disabled>
+          </div>
+          <div class="form-group">
+            <label for="loanTerm">Plazo del Crédito (quincenas)</label>
+            <input type="number" class="form-control mb-2" id="loanTerm" name="loanTerm" placeholder="Ingresa el número de quincenas" (input)="onLoanTermChange()">
+          </div>
+          <button type="button" class="btn btn-custom btn-block" (click)="calculate()">Calcular</button>
+        </form>
+        <div class="result">
+          <h4>Resultados</h4>
+          <p><strong>Cuota Quincenal: </strong> <span id="biweeklyPayment">{{ biweeklyPayment | currencyFormat }}</span></p>
+          <p><strong>Total a Pagar: </strong> <span id="totalPayment">{{ totalPayment | currencyFormat }}</span></p>
         </div>
-        <div class="card simulator-card">
-            <h3 class="text-center">Calcula tus cuotas</h3>
-            <form>
-                <div class="form-group">
-                    <label for="loanAmount">Monto del Crédito</label>
-                    <input type="number" class="form-control mb-2" id="loanAmount" placeholder="Ingresa el monto del crédito">
-                </div>
-                <div class="form-group">
-                    <label for="interestRate">Tasa de Interés (%)</label>
-                    <input type="number" class="form-control mb-2" id="interestRate" placeholder="Ingresa la tasa de interés">
-                </div>
-                <div class="form-group">
-                    <label for="loanTerm">Plazo del Crédito (quincenas)</label>
-                    <input type="number" class="form-control mb-2" id="loanTerm" placeholder="Ingresa el número de quincenas">
-                </div>
-                <button type="button" class="btn btn-custom btn-block" (click)="calculate()">Calcular</button>
-            </form>
-            <div class="result">
-                <h4>Resultados</h4>
-                <p><strong>Cuota Quincenal:</strong> <span id="biweeklyPayment">{{ biweeklyPayment }}</span></p>
-                <p><strong>Total a Pagar:</strong> <span id="totalPayment">{{ totalPayment }}</span></p>
-            </div>
-        </div>
+      </div>
     </div>
-    <div class="col-lg-4 mx-auto">
-        <h3 class="text-center">Descripcion del crédito</h3>
-        <div *ngIf="selectedCreditLineDetails">
-            <p><strong>Monto:</strong> {{ selectedCreditLineDetails.monto }}</p>
-            <p><strong>Destinación:</strong> {{ selectedCreditLineDetails.destinacion }}</p>
-            <p><strong>Plazo:</strong> {{ selectedCreditLineDetails.plazo }} quincenas</p>
-            <p *ngIf="selectedCreditLineDetails.tasa_interes_1"><strong>Tasa de Interés 1:</strong> {{ selectedCreditLineDetails.tasa_interes_1 }}%</p>
-            <p *ngIf="selectedCreditLineDetails.tasa_interes_2"><strong>Tasa de Interés 2:</strong> {{ selectedCreditLineDetails.tasa_interes_2 }}%</p>
-        </div>
+    <div *ngIf="lineasCredito.length === 0" class="text-center">
+      <p>Cargando datos de las líneas de crédito...</p>
     </div>
+  </div>
+  <div class="col-lg-4 mx-auto" *ngIf="selectedCreditLineDetails">
+    <h3 class="text-center">Descripción del crédito</h3>
+    <p><strong>Monto:</strong> {{ selectedCreditLineDetails.monto | currencyFormat }}</p>
+    <p><strong>Destinación:</strong> {{ selectedCreditLineDetails.destinacion }}</p>
+    <p><strong>Plazo:</strong> {{ selectedCreditLineDetails.plazo }} quincenas</p>
+    <p *ngIf="selectedCreditLineDetails.tasa_interes_1"><strong>Tasa de Interés 1:</strong> {{ selectedCreditLineDetails.tasa_interes_1 }}%</p>
+    <p *ngIf="selectedCreditLineDetails.tasa_interes_2"><strong>Tasa de Interés 2:</strong> {{ selectedCreditLineDetails.tasa_interes_2 }}%</p>
+  </div>
 </div>
