--- a/front/src/app/components/credit-service/components/simulator/simulator.component.css
+++ b/front/src/app/components/credit-service/components/simulator/simulator.component.css
@@ -94,3 +94,36 @@ h1, h2, h3, h4 {
 .result {
     margin-top: 20px;
 }
+
+.simulator-card .row {
+    display: flex;
+    flex-wrap: wrap;
+  }
+  
+  .simulator-card .result, .simulator-card .animacion, .simulator-card .btn-custom {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+  
+  .simulator-card .result {
+    text-align: center;
+    margin-bottom: 20px;
+  }
+  
+  .simulator-card .animacion {
+    margin-bottom: 10px;
+  }
+  
+  @media (min-width: 992px) {
+    .simulator-card .result, .simulator-card .animacion {
+      flex: 1 1 50%;
+      max-width: 50%;
+    }
+  
+    .simulator-card .result {
+      margin-bottom: 0;
+    }
+  }
+  
