--- a/front/src/app/components/credit-service/components/simulator/simulator.component.html
+++ b/front/src/app/components/credit-service/components/simulator/simulator.component.html
@@ -33,9 +33,9 @@
               <p class="h4"><strong>Total a Pagar: </strong> <span id="totalPayment">{{ totalPayment | currencyFormat }}</span></p>
             </div>
           </div>
-          <div class="col-lg-6 d-flex flex-column align-items-center text-center">
-            <ng-lottie class="animacion" [options]="options" width="200px"></ng-lottie>
-            <button type="button" class="btn btn-custom mt-3" routerLink="/login">Solicítalo Aquí</button>
+          <div class="col-lg-6 d-flex flex-column align-items-center justify-content-center text-center">
+            <a routerLink="/login"><ng-lottie class="animacion" [options]="options" width="200px"></ng-lottie></a>
+            <button routerLink="/login" type="button" class="btn btn-custom">Solicítalo Aquí</button>
           </div>
         </div>
       </div>
