--- a/front/src/app/components/admin/admin.component.html
+++ b/front/src/app/components/admin/admin.component.html
@@ -1,8 +1,8 @@
 <div class="row">
-    <div class="col-md-2">
+    <div class="col-xl-2">
         <app-sidebar-admin></app-sidebar-admin>
     </div>
-    <div class="col-md-10">
+    <div class="col-xl-10">
         <h1>HOLAAAA</h1>
     </div>
 </div>
