--- a/front/src/app/components/admin/components/sidebar-admin/sidebar-admin.component.css
+++ b/front/src/app/components/admin/components/sidebar-admin/sidebar-admin.component.css
@@ -1,13 +1,3 @@
-body {
-  min-height: 100vh;
-  min-height: -webkit-fill-available;
-  padding-top: 0px;
-}
-
-html {
-  height: -webkit-fill-available;
-}
-
 main {
   height: 100vh;
   height: -webkit-fill-available;
@@ -138,4 +128,22 @@ main {
 
 .bd-mode-toggle .dropdown-menu .active .bi {
   display: block !important;
+}
+
+
+@media (max-width: 1199.98px) {
+  .b-example-divider {
+    display: none;
+  }
+  
+  .b-example-vr {
+    display: none;
+  }
+}
+
+.offcanvas-body {
+  display: flex;
+  flex-direction: column;
+  padding: 0;
+  height: 100%;
 }
